discussion/kv_engine/147364/147364_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44590: Maintain dropped collections from replayPrecommitHook

Prior to this fix if the replay function was used (because flush and
compaction interleaved) the dropped collections meta-data wasn't being
maintained. The associated MB identified a case where the meta-data
stored a dropped collection which had been fully purged.

This fix updates replayPrecommitHook so that the dropped collection
meta-data is maintained. The new code has to consider that new
collections could of been dropped during the 'interleave', this means
that the final output is no longer just the removal of the  dropped
collection data, but is either deleted or just the newly dropped
collections (so any following full compaction can purge the new dropped
collection).

Change-Id: I9eeb65c8cbaa195ec451087439fca5ddf9818fe8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-04 10:00:50.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-04 10:08:55.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34002/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34002/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29211/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29211/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9383/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9028/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16931/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16931/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9169/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7419/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49: error: no member named "getDroppedCollections" in "Collections::VB::EraserContext" [clang-diagnostic-error]
                        hook_ctx.eraserContext->getDroppedCollections());
                                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7419/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: no member named "getDroppedCollections" in "Collections::VB::EraserContext" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7419/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8085/ : FAILURE

Compile error at [2021-03-04T10:01:57.023Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: no member named "getDroppedCollections" in "Collections::VB::EraserContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8085/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5957/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
